--- a/journal.Rmd
+++ b/journal.Rmd
@@ -20,15 +20,64 @@ knitr::opts_chunk$set(message=FALSE,warning=FALSE, cache=TRUE)
 
 This is an `.Rmd` file. It is plain text with special features. Any time you write just like this, it will be compiled to normal text in the website. If you put a \# in front of your text, it will create a top level-header.
 
-# My first post
+# My first post challenge_
 
 Last compiled: `r Sys.Date()`
+```{r}
+library(vroom)
+library(data.table)
+library(tidyverse)
+col_types <- list(
+  id = col_character(),
+  type = col_character(),
+  name_first = col_character(),
+  name_last = col_character(),
+  organization = col_character()
+)
 
-Notice that whatever you define as a top level header, automatically gets put into the table of contents bar on the left. 
+assignee_tbl <- vroom(
+  file       = "F:/TUHH/Semesters/3rd Sem/Business Data science basics/DS_101/DS_101/00_data/patents/assignee.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL")
+)
+
+col_types <- list(
+  patent_id = col_character(),
+  assignee_id = col_character(),
+  location_id = col_character()
+)
+
+patent_assignee_tbl <- vroom(
+  file       = "F:/TUHH/Semesters/3rd Sem/Business Data science basics/DS_101/DS_101/00_data/patents/patent_assignee.tsv", 
+  delim      = "\t", 
+  col_types  = col_types,
+  na         = c("", "NA", "NULL")
+)
+
+Join_tbl <- merge(patent_assignee_tbl,assignee_tbl, by.x = "assignee_id", by.y = "id") 
+
+num_tbl<- Join_tbl%>%
+  select(patent_id,organization)%>% 
+  count(organization)%>%
+  group_by(organization) 
+
+final_tbl <- num_tbl %>%
+  select (organization,n)%>%
+  arrange(desc(n))
+
+#List of top ten companies with most assigned/granted patents.
+
+head(final_tbl,10)
+
+```
+
+
+ 
 
 ## Second level header
 
-You can add more headers by adding more hashtags. These won't be put into the table of contents
+
 
 ### third level header
 
